...
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome_mname_is_jeff"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoView" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="389dp"
        android:layout_height="40dp"
        android:fontFamily="@font/montserrat_semibold"
        android:letterSpacing="0.02"
        android:stateListAnimator="@null"
        android:text="@string/sign_out"
...
        app:layout_constraintEnd_toEndOf="@+id/Scan"
        app:layout_constraintStart_toStartOf="@+id/Scan"
        app:layout_constraintTop_toTopOf="@+id/Scan"
        app:srcCompat="@drawable/ic_baseline_qr_code_24" />

    <TextView
        android:id="@+id/id2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="Kickin Ass and Taking Names"
...
        android:text="Major"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/infoView"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider2" />

    <TextView
        android:id="@+id/buildingName"
        android:layout_width="291dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat"
        android:text="N/A"
...
        app:layout_constraintBottom_toTopOf="@+id/viewDivider1"
        app:layout_constraintEnd_toEndOf="@+id/infoView"
        app:layout_constraintTop_toTopOf="@+id/infoView"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/id"
        android:layout_width="91dp"
        android:layout_height="20dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="1234567890"
        android:textAlignment="viewEnd"
...
