<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    tools:context=".Layouts.Startup">

<ImageView
...
    android:textColor="#FFFFFF"
    android:textSize="40sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/register"
    style="?android:attr/borderlessButtonStyle"
    android:layout_width="292dp"
    android:layout_height="54dp"
    android:layout_marginStart="68dp"
    android:layout_marginLeft="68dp"
    android:layout_marginTop="640dp"
...
